# answer_service

./: .coderabbit.yaml  .coveragerc  .dockerignore  .env.example  .gitattributes  .gitignore  .importlinter  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTEXT-MAP.md  README.md  docker-compose.dev.yaml  docker-compose.yaml  justfile  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  sonar-project.properties
.claude/: settings.json
.claude/agents/: architecture-reviewer.md  test-writer.md
.claude/skills/add-adapter/: SKILL.md
.claude/skills/add-config/: SKILL.md
.claude/skills/add-di-provider/: SKILL.md
.claude/skills/add-migration/: SKILL.md
.claude/skills/add-use-case/: SKILL.md
.codex/: AGENTS.md  config.toml
.github/: AI_POLICY.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  dependabot.yml  labeler.yml  labels.yml  pull_request_template.md  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docker.yml  labeler.yml  labels.yml  pr-title.yml  sonarqube.yml  zizmor.yml
deploy/: env.example
deploy/prod/answer_service/: Dockerfile
deploy/prod/nats/: nats.conf
deploy/prod/postgres/: pg_hba.conf  postgresql.conf
deploy/prod/redis/: redis_entrypoint.sh
examples/: qa_catalog_sample.xlsx  ~$qa_catalog_sample.xlsx
src/answer_service/: fastapi_app.py  scheduler_app.py  worker_app.py
src/answer_service/application/: error.py
src/answer_service/infrastructure/: errors.py
tests/integration/: arrange.py  brokers.py  conftest.py  inject.py  ioc.py
tests/integration/analytics/: test_analytics_gateway.py  test_query_log_listing.py
tests/integration/infrastructure/: conftest.py  test_event_serializer.py  test_langchain_embedder.py  test_polars_source_file_reader.py  test_postgres_lexical_retriever.py  test_qdrant_dense_floor.py  test_source_file_storage.py  test_task_iq_scheduler.py
tests/integration/outbox/: conftest.py  test_outbox_gateway.py
tests/integration/persistence/: conftest.py  test_indexing_task_gateway.py  test_qa_catalog_gateway.py  test_stuck_task_reaping.py
tests/integration/worker/: test_indexing_flow.py
tests/quality/: dataset.py  test_search_quality.py
tests/unit/: support.py
tests/unit/application/: conftest.py  test_pipelines.py  test_query_recording_pipeline.py
tests/unit/domain/: conftest.py
tests/unit/factories/: command_factories.py  config_factories.py  domain_factories.py  env_data_factories.py  handler_factories.py  outbox_factories.py  source_file_factories.py  source_stubs.py  stub_source_factory.py
tests/unit/infrastructure/: test_outbox_event_payload.py  test_outbox_publisher.py  test_outbox_routes.py  test_qdrant_point_id.py
(+337 files in other folders)
